Oppdaterte flere applikasjoner til å bruke jib-distroless convention