@@ -1,13 +1,10 @@
 
 plugins {
     kotlin("jvm")
-    id("com.google.cloud.tools.jib")
+    id("jib-distroless")
 }
 
-val baseImage: String by project
 val jvmMajorVersion: String by project
-
-val image: String? by project
 
 dependencies {
     implementation(project(":lib:hoplite-config"))
@@ -39,12 +36,3 @@ tasks.withType<Test>().configureEach {
     useJUnitPlatform()
 }
 
-jib {
-    from.image = "$baseImage:$jvmMajorVersion"
-    to.image = "${image ?: project.name}:${project.version}"
-    container {
-        environment = mapOf(
-            "IMAGE_WITH_VERSION" to "${image ?: project.name}:${project.version}")
-        jvmFlags = listOf("-XX:ActiveProcessorCount=4", "-XX:+UseZGC", "-XX:+ZGenerational")
-    }
-}
